# api/openapi-spec/swagger.json
@@ -6221,6 +6221,10 @@
       "description": "If affinity is specifies, obey all the affinity rules",
       "$ref": "#/definitions/v1.Affinity"
      },
+     "allowProbeWithNoPodNetwork": {
+      "description": "Allow probes without pod network.\nAdvanced setups may have the ability to probe network without the default Pod network.\nThis will bypass the pod network validation for probes.",
+      "type": "boolean"
+     },
      "dnsConfig": {
       "description": "Specifies the DNS parameters of a pod.\nParameters specified here will be merged to the generated DNS\nconfiguration based on DNSPolicy.\n+optional",
       "$ref": "#/definitions/v1.PodDNSConfig"
@@ -6255,10 +6259,6 @@
      "nodeSelector": {
       "description": "NodeSelector is a selector which must be true for the vmi to fit on a node.\nSelector which must match a node's labels for the vmi to be scheduled on that node.\nMore info: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/\n+optional",
       "type": "object"
-     },
-     "probeNoPodNetwork": {
-      "description": "Allow probes without pod network.\nAdvanced setups may have the ability to probe network without the default Pod network.\nThis will bypass the pod network validation for probes.",
-      "type": "boolean"
      },
      "readinessProbe": {
       "description": "Periodic probe of VirtualMachineInstance service readiness.\nVirtualmachineInstances will be removed from service endpoints if the probe fails.\nCannot be updated.\nMore info: https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle#container-probes\n+optional",
