# pkg/api/v1/types.go
@@ -187,7 +187,7 @@ type VirtualMachineInstanceSpec struct {
 	// Allow probes without pod network.
 	// Advanced setups may have the ability to probe network without the default Pod network.
 	// This will bypass the pod network validation for probes.
-	ProbeNoPodNetwork bool `json:"probeNoPodNetwork,omitempty"`
+	AllowProbeWithNoPodNetwork bool `json:"allowProbeWithNoPodNetwork,omitempty"`
 	// Specifies the hostname of the vmi
 	// If not specified, the hostname will be set to the name of the vmi, if dhcp or cloud-init is configured properly.
 	// +optional
